# pharma-guide-ai

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pharma_agent_roadmap_50cc5d52.plan.md  pyproject.toml  requirements.txt  run_dev.sh  streamlit_app.py
.github/workflows/: eval.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_chat_memory.py  0003_commerce.py  0004_routing_logs.py  0005_seed_medicines.py  0006_checkout_confirmations.py
app/: main.py
app/agents/: checkpointer.py  graph.py  intents.py  specialists.py  state.py  supervisor.py  tool_agent.py
app/client/: api.py  state.py  ui.py
app/core/: config.py  logger.py  prompts.py  security.py
app/db/: database.py  init_db.py
app/evaluation/: __init__.py  agent_eval.py  datasets.py  deepeval_adapter.py  metrics.py  rag_eval.py  ragas_adapter.py  retrieval_eval.py  runner.py
app/ingestion/: document_processor.py  embeddings.py  json_loader.py  knowledge_loader.py  pdf_loader.py  text_splitter.py
app/memory/: context_builder.py  history_service.py  redis_client.py  summarization_service.py  tokens.py
app/models/: cart.py  chat.py  chat_message.py  chat_session.py  checkout_confirmation.py  conversation_summary.py  medicine.py  order.py  request_model.py  user.py  (+1 more)
frontend/: INTEGRATION_GUIDE.md  README.md  package-lock.json  package.json
phases/: PHASE0_FOUNDATION.md  PHASE1_MEMORY.md  PHASE2_TOOLS.md  PHASE3_LANGGRAPH.md  PHASE4_SUPERVISOR.md  PHASE5_SPECIALISTS.md
tests/: test_checkout_confirmation.py  test_tools.py  tool_queries.py
(+104 files in other folders)
